Some fixes and alignments to jumbotron and technology section

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -32,9 +32,9 @@ a:hover {
 
 /*header*/
 header {
-    min-width: 1200px;
+    min-width: 900px;
     background-color: var(--dis-primary-color);
-    padding: 3rem;
+    padding: 1rem;
 }
 
 .header-container {
@@ -65,35 +65,39 @@ header {
 
 /*jumbotron*/
 .jumbotron-container {
-    min-height: 500px;
     width: 100%;
     background-image: url(../img/jumbo.png);
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    div {
+    #jumbo-content {
         min-height: 400px;
         min-width: 300px;
         text-align: center;
+        padding-top: 4rem;
         color: white;
-        padding: 1rem;
+
+
 
         p {
             margin-top: 20px;
-            font-size: 20px;
+            font-size: 16px;
         }
     }
 }
 
 .mac {
+    margin-top: 10px;
     padding: 10px 15px;
     border-radius: 20px;
 }
 
 .apri {
+    margin-top: 10px;
     padding: 10px 15px;
     border-radius: 20px;
     color: white;
@@ -165,6 +169,7 @@ header {
         min-height: 900px;
         min-width: 1200px;
         text-align: center;
+        justify-content: center;
 
         p {
             margin-top: 2rem;
